File Open Dialog Fix

--- a/modules/web/index.html
+++ b/modules/web/index.html
@@ -680,7 +680,7 @@
                         </div>
                         <div class='form-group'>
                             <div class='folder-dialog-form-btn'>
-                                <button type='button' class='btn btn-primary'>Open</button>
+                                <button type='button' class='btn btn-primary open-button'>Open</button>
                                 <button type='button' class='btn btn-default' data-dismiss='modal'>Cancel</button>
                             </div>
                         </div>
@@ -801,7 +801,7 @@
 
 <script src="lib/swagger-editor-3.0.1/swagger-editor-bundle.js"></script>
 <script src="dist/bundle.js"></script>
-<script src="styleswitcher.js"></script>
+<!--<script src="styleswitcher.js"></script>-->
 
 <script>
     $(document).ready(function(){
